--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "ky": "^1.8.1",
     "lucide-vue-next": "^0.511.0",
+    "motion-v": "^1.1.1",
     "pinia": "^3.0.2",
     "reka-ui": "^2.2.1",
     "tailwind-merge": "^3.3.0",
